--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>App Name: By Taranveer</title>
+		<title>Flippit!: By Taranveer</title>
 		<link rel="icon" type="image/x-icon" href="/Logos/black icon.svg" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
 			<div class="container-fluid">
 				<a class="navbar-brand" href="/index.html">
 					<img src="/Logos/white icon.svg" height="40" />
-					App Name
+					Flippit!
 				</a>
 				<button
 					class="navbar-toggler"
@@ -62,16 +62,32 @@
 		</nav>
 
 		<main class="container py-3">
-			<h1>App UI GOES HERE</h1>
-			<input class="form-control my-3" placeholder="Enter a message" type="text" style="width: 12rem" id="message" name="message" />
-			<button class="btn btn-primary" id="btnSubmit" type="submit">Display Message</button>
+			<div class="row row-cols-1 row-cols-md-2">
+				<div class="col">
+					<h1 class="display-5 fw-bold">Flippit!</h1>
+					<h2 class="lead border-2 border-bottom">A Coding Challenge</h2>
+					<p>Flippit is a coding challenge to reverse a user specified text.</p>
+					<p>To begin, enter a message in the input box and click the "Flip" button.</p>
+				</div>
+				<div class="col">
+					<form action="#">
+						<label for="userText" class="form-label">Enter the text you want to flip.</label>
+						<input class="form-control" type="text" id="userText" name="userText" placeholder="Enter text" required />
+						<button class="btn btn-primary my-3" id="btnSubmit" type="button">Flip!</button>
+					</form>
+					<div class="alert alert-success mt-3 invisible" id="alert" role="alert">
+						<h2 class="alert-heading">Results</h2>
+						<p id="msg"></p>
+					</div>
+				</div>
+			</div>
 		</main>
 
 		<footer class="py-3 container-fluid">
 			<div class="container">
 				<div class="row align-items-center row-cols-1 row-cols-lg-3 gy-2">
 					<div class="col text-center text-lg-start">&copy; 2023 Taranveer Singh</div>
-					<div class="col text-center">
+					<div class="col text-center d-lg-block d-none">
 						<a href="https://stirring-medovik-226616.netlify.app/" target="_blank">
 							<img src="/Logos/white logo.svg" height="40" />
 						</a>
@@ -90,12 +106,12 @@
 			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 			crossorigin="anonymous"
 		></script>
-		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 		<script src="/js/site.js"></script>
 		<script>
 			const button = document.getElementById("btnSubmit");
-			button.addEventListener("click", displayMessage);
+			button.addEventListener("click", getValues);
 		</script>
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	</body>
 </html>
