--- a/code.html
+++ b/code.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>App Name: By Taranveer</title>
+		<title>Flippit!: By Taranveer</title>
 		<link rel="icon" type="image/x-icon" href="/Logos/black icon.svg" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -22,7 +22,7 @@
 			<div class="container-fluid">
 				<a class="navbar-brand" href="/index.html">
 					<img src="/Logos/white icon.svg" height="40" />
-					App Name
+					Flippit!
 				</a>
 				<button
 					class="navbar-toggler"
