--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>App Name: By Taranveer</title>
+		<title>Flippit: By Taranveer</title>
 		<link rel="icon" type="image/x-icon" href="/Logos/black icon.svg" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
 			<div class="container-fluid">
 				<a class="navbar-brand" href="/index.html">
 					<img src="/Logos/white icon.svg" height="40" />
-					App Name
+					Flippit
 				</a>
 				<button
 					class="navbar-toggler"
@@ -64,12 +64,12 @@
 		<main class="container py-5">
 			<div class="row row-cols-1 row-cols-md-2 align-items-center h-100">
 				<div class="col order-md-last text-center">
-					<img src="/img/APPNAMELogo.svg" class="img-fluid app-logo" />
+					<img src="/img/flippit_dark.svg" class="img-fluid app-logo" />
 				</div>
 				<div class="col text-center">
-					<h1 class="display-6 fw-bold mt-3">App Name</h1>
+					<h1 class="display-6 fw-bold mt-3">Flippit</h1>
 					<h2 class="display-6">Coding Challenge</h2>
-					<div class="lead">Your project description goes here. CHANGE ME!</div>
+					<div class="lead">Program an app that reverses a string</div>
 
 					<div class="d-flex justify-content-center">
 						<ul class="list-unstyled text-start">
