--- a/app.html
+++ b/app.html
@@ -47,7 +47,7 @@
 						</li>
 						<li class="nav-item">
 							<!-- change to real repo link -->
-							<a class="nav-link" href="#">The Repo</a>
+							<a class="nav-link" target="_blank" href="https://github.com/taranveersingh93/string-reverse">The Repo</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" target="_blank" href="https://stirring-medovik-226616.netlify.app/">About</a>
