--- a/code.html
+++ b/code.html
@@ -55,7 +55,7 @@
 						</li>
 						<li class="nav-item">
 							<!-- Write a blog post about the challenge -->
-							<a class="nav-link" href="#">Blog</a>
+							<a class="nav-link" target="_blank" href="#">Blog</a>
 						</li>
 					</ul>
 				</div>
