Fix broken links

--- a/app.html
+++ b/app.html
@@ -50,11 +50,11 @@
 							<a class="nav-link" target="_blank" href="https://github.com/taranveersingh93/string-reverse">The Repo</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" target="_blank" href="https://stirring-medovik-226616.netlify.app/">About</a>
+							<a class="nav-link" target="_blank" href="https://taranveer.com/">About</a>
 						</li>
 						<li class="nav-item">
 							<!-- Write a blog post about the challenge -->
-							<a class="nav-link" target="_blank" href="#">Blog</a>
+							<a class="nav-link" target="_blank" href="https://learnlogmvc.up.railway.app">Blog</a>
 						</li>
 					</ul>
 				</div>
