--- a/code.html
+++ b/code.html
@@ -182,7 +182,7 @@ const displayMessage = (input) => {
 				<div class="row align-items-center row-cols-1 row-cols-lg-3 gy-2">
 					<div class="col text-center text-lg-start">&copy; 2023 Taranveer Singh</div>
 					<div class="col text-center">
-						<a href="https://stirring-medovik-226616.netlify.app/" target="_blank">
+						<a href="https://taranveer.com" target="_blank">
 							<img src="/Logos/white logo.svg" height="40" />
 						</a>
 					</div>
